--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -714,7 +714,7 @@
   "pli-tv-kd4:11.2.86": "When they’ve just finished, and only some members of the gathering have left, a smaller number of resident monks arrive. ",
   "pli-tv-kd4:11.2.87": "In such a case the invitations of those who already have invited are valid, and the late arrivals should invite in the presence of the others. ",
   "pli-tv-kd4:11.2.88": "And there’s a serious offense for those who already have invited. ",
-  "pli-tv-kd4:11.2.89": "“On the invitation day it may happen that five or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd4:11.2.89": "“On the invitation day it may be that five or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd4:11.2.90": "They know ",
   "pli-tv-kd4:11.2.91": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd4:11.2.92": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
