--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -795,7 +795,7 @@
   "pli-tv-kd4:13.1.38": "If they do investigate, and they do see someone, and they then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.39": "If they do investigate, and they do see someone, and they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.40": "If they do investigate, and they do see someone, but they think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and they then do the invitation procedure aiming at schism, there’s a serious offense. ",
-  "pli-tv-kd4:13.1.41": "“It may happen that resident monks hear signs and indications of newly arrived monks: the sound of the feet of someone arriving, the sound of sandals being knocked together, the sound of coughing, the sound of sneezing. ",
+  "pli-tv-kd4:13.1.41": "“It may be that resident monks hear signs and indications of newly arrived monks: the sound of the feet of someone arriving, the sound of sandals being knocked together, the sound of coughing, the sound of sneezing. ",
   "pli-tv-kd4:13.1.42": "As a consequence, they think monks may have arrived, but they’re unsure. Then—",
   "pli-tv-kd4:13.1.43": "If they don’t investigate, and they then do the invitation procedure, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.44": "If they do investigate, but they don’t see anyone, and they then do the invitation procedure, there’s no offense. ",
