--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -781,7 +781,7 @@
   "pli-tv-kd4:13.1.24": "If they do investigate, and they do see someone, and they then do the invitation procedure together, there’s no offense. ",
   "pli-tv-kd4:13.1.25": "If they do investigate, and they do see someone, and they then do the invitation procedure separately, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.26": "If they do investigate, and they do see someone, but they think, ʻI hope they get lost! I hope they disappear! Who needs them?’ and they then do the invitation procedure aiming at schism, there’s a serious offense. ",
-  "pli-tv-kd4:13.1.27": "“It may be that newly arrived monks hear signs and indications of resident monks: the sound of the feet of someone doing walking meditation, the sound of recitation, the sound of coughing, the sound of sneezing. ",
+  "pli-tv-kd4:13.1.27": "“It may happen that newly arrived monks hear signs and indications of resident monks: the sound of the feet of someone doing walking meditation, the sound of recitation, the sound of coughing, the sound of sneezing. ",
   "pli-tv-kd4:13.1.28": "As a consequence, they think there may be resident monks there, but they’re unsure. Then—",
   "pli-tv-kd4:13.1.29": "If they don’t investigate, and they then do the invitation procedure, there’s an offense of wrong conduct. ",
   "pli-tv-kd4:13.1.30": "If they do investigate, but they don’t see anyone, and they then do the invitation procedure, there’s no offense. ",
