--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1036,7 +1036,7 @@
   "pli-tv-kd2:28.7.21": "And there’s no offense for the reciters.” ",
   "pli-tv-kd2:28.7.22": "The group of fifteen on non-offenses is finished. ",
   "pli-tv-kd2:29.1.0": "29. The group of fifteen on perceiving an incomplete assembly as incomplete ",
-  "pli-tv-kd2:29.1.1": "“On the observance day it may happen that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:29.1.1": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:29.1.2": "They know ",
   "pli-tv-kd2:29.1.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:29.1.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the observance-day procedure by reciting the Monastic Code. ",
