--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1043,7 +1043,7 @@
   "pli-tv-kd2:29.1.5": "While they’re doing so, a greater number of resident monks arrive. ",
   "pli-tv-kd2:29.1.6": "In such a case, those monks should recite the Monastic Code once more. ",
   "pli-tv-kd2:29.1.7": "And there’s an offense of wrong conduct for the reciters. ",
-  "pli-tv-kd2:29.2.1": "On the observance day it may happen that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:29.2.1": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:29.2.2": "They know ",
   "pli-tv-kd2:29.2.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:29.2.4": "Perceiving that they’re acting according to the Teaching and the Monastic Law, yet perceiving that the assembly is incomplete when it is, they do the observance-day procedure by reciting the Monastic Code. ",
