--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1126,7 +1126,7 @@
   "pli-tv-kd2:31.2.6": "While they’re doing so, an equal number of resident monks arrive. ",
   "pli-tv-kd2:31.2.7": "In such a case, what has been recited is valid, and the remainder should be listened to. ",
   "pli-tv-kd2:31.2.8": "And there’s an offense of wrong conduct for the reciters. ",
-  "pli-tv-kd2:31.2.9": "On the observance day it may happen that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:31.2.9": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:31.2.10": "They know ",
   "pli-tv-kd2:31.2.11": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:31.2.12": "They think, ʻIt’s allowable for us to do the observance-day procedure; it’s not unallowable.’ ",
