--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1157,7 +1157,7 @@
   "pli-tv-kd2:32.1.6": "While they’re doing so, a greater number of resident monks arrive. ",
   "pli-tv-kd2:32.1.7": "In such a case, those monks should recite the Monastic Code once more. ",
   "pli-tv-kd2:32.1.8": "And there’s a serious offense for the reciters. ",
-  "pli-tv-kd2:32.2.1": "On the observance day it may happen that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:32.2.1": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:32.2.2": "They know ",
   "pli-tv-kd2:32.2.3": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:32.2.4": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
