--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1195,7 +1195,7 @@
   "pli-tv-kd2:32.2.36": "When they’ve just finished, a smaller number of resident monks arrive. ",
   "pli-tv-kd2:32.2.37": "In such a case, what has been recited is valid, and the late arrivals should announce their purity in the presence of the others. ",
   "pli-tv-kd2:32.2.38": "And there’s a serious offense for the reciters. ",
-  "pli-tv-kd2:32.2.39": "“On the observance day it may happen that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:32.2.39": "“On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:32.2.40": "They know ",
   "pli-tv-kd2:32.2.41": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:32.2.42": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
