--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1227,7 +1227,7 @@
   "pli-tv-kd2:32.2.68": "When they’ve just finished, and only some members of the gathering have left, a greater number of resident monks arrive. ",
   "pli-tv-kd2:32.2.69": "In such a case, those monks should recite the Monastic Code once more. ",
   "pli-tv-kd2:32.2.70": "And there’s a serious offense for the reciters. ",
-  "pli-tv-kd2:32.2.71": "On the observance day it may happen that four or more resident monks have gathered in a certain monastery. ",
+  "pli-tv-kd2:32.2.71": "On the observance day it may be that four or more resident monks have gathered in a certain monastery. ",
   "pli-tv-kd2:32.2.72": "They know ",
   "pli-tv-kd2:32.2.73": "that there are other resident monks who haven’t arrived. ",
   "pli-tv-kd2:32.2.74": "They think, ʻI hope they get lost! I hope they disappear! Who needs them?’ ",
