--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -282,7 +282,7 @@
   "pli-tv-kd3:6.1.6": "a monk, a nun, a trainee nun, a novice monk, or a novice nun. ",
   "pli-tv-kd3:6.1.8": "But you should return within seven days. ",
   "pli-tv-kd3:6.2.0": "A monk sending a message ",
-  "pli-tv-kd3:6.2.1": "“It may happen that a monk is sick ",
+  "pli-tv-kd3:6.2.1": "“It may be that a monk is sick ",
   "pli-tv-kd3:6.2.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.2.3": "ʻPlease come, Venerables, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.2.4": "ʻI’ll look for food for the sick one and for the nurses; I’ll look for medicine; and I’ll enquire about his sickness and nurse him.’ ",
