--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -292,7 +292,7 @@
   "pli-tv-kd3:6.3.3": "ʻPlease come, Venerables, I’m discontent with the spiritual life.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.3.4": "ʻI’ll allay his discontent or find someone else to do it, or I’ll give him a teaching.’ ",
   "pli-tv-kd3:6.3.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.4.1": "It may happen that a monk becomes anxious ",
+  "pli-tv-kd3:6.4.1": "It may be that a monk becomes anxious ",
   "pli-tv-kd3:6.4.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.4.3": "ʻPlease come, Venerables, I’m anxious.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.4.4": "ʻI’ll dispel his anxiety or find someone else to do it, or I’ll give him a teaching.’ ",
