--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -297,7 +297,7 @@
   "pli-tv-kd3:6.4.3": "ʻPlease come, Venerables, I’m anxious.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.4.4": "ʻI’ll dispel his anxiety or find someone else to do it, or I’ll give him a teaching.’ ",
   "pli-tv-kd3:6.4.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.5.1": "It may happen that a monk has a wrong view ",
+  "pli-tv-kd3:6.5.1": "It may be that a monk has a wrong view ",
   "pli-tv-kd3:6.5.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.5.3": "ʻPlease come, Venerables, I have a wrong view.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.5.4": "ʻI’ll make him give up that wrong view or get someone else to do it, or I’ll give him a teaching.’ ",
