--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -312,7 +312,7 @@
   "pli-tv-kd3:6.7.3": "ʻPlease come, Venerables, I deserve to be sent back to the beginning.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.7.4": "ʻI’ll make an effort to get him sent back to the beginning, I’ll do the proclamation, or I’ll complete the quorum.’ ",
   "pli-tv-kd3:6.7.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.8.1": "It may happen that a monk deserves the trial period, ",
+  "pli-tv-kd3:6.8.1": "It may be that a monk deserves the trial period, ",
   "pli-tv-kd3:6.8.2": "and he sends a message to the monks: ",
   "pli-tv-kd3:6.8.3": "ʻPlease come, Venerables, I deserve to be given the trial period.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.8.4": "ʻI’ll make an effort to get him given the trial period, I’ll do the proclamation, or I’ll complete the quorum.’ ",
