--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -327,7 +327,7 @@
   "pli-tv-kd3:6.10.3": "ʻPlease come, Venerables, the Sangha wants to do a legal procedure against me.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.10.4": "ʻHow may the Sangha not do the procedure or make it lighter?’ ",
   "pli-tv-kd3:6.10.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.11.1": "Or it may happen that the Sangha has done a legal procedure against him—whether a procedure of condemnation, demotion, banishment, reconciliation, or ejection. ",
+  "pli-tv-kd3:6.11.1": "Or it may be that the Sangha has done a legal procedure against him—whether a procedure of condemnation, demotion, banishment, reconciliation, or ejection. ",
   "pli-tv-kd3:6.11.2": "He sends a message to the monks: ",
   "pli-tv-kd3:6.11.3": "ʻPlease come, Venerables, the Sangha has done a legal procedure against me.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.11.4": "ʻHow can I help him behave properly and suitably so as to deserve to be released? What can I do for the Sangha to lift that procedure?’ ",
