--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -348,7 +348,7 @@
   "pli-tv-kd3:6.14.3": "ʻPlease come, Venerables, I’m anxious.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.14.4": "ʻI’ll dispel her anxiety or find someone else to do it, or I’ll give her a teaching.’ ",
   "pli-tv-kd3:6.14.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.15.1": "It may happen that a nun has a wrong view ",
+  "pli-tv-kd3:6.15.1": "It may be that a nun has a wrong view ",
   "pli-tv-kd3:6.15.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.15.3": "ʻPlease come, Venerables, I have a wrong view.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.15.4": "ʻI’ll make her give up that wrong view or get someone else to do it, or I’ll give her a teaching.’ ",
