--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -358,7 +358,7 @@
   "pli-tv-kd3:6.16.3": "ʻPlease come, Venerables, I deserve to be given the trial period.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.16.4": "ʻI’ll make an effort to get her given the trial period.’ ",
   "pli-tv-kd3:6.16.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.17.1": "It may happen that a nun deserves to be sent back to the beginning, ",
+  "pli-tv-kd3:6.17.1": "It may be that a nun deserves to be sent back to the beginning, ",
   "pli-tv-kd3:6.17.2": "and she sends a message to the monks: ",
   "pli-tv-kd3:6.17.3": "ʻPlease come, Venerables, I deserve to be sent back to the beginning.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.17.4": "ʻI’ll make an effort to get her sent back to the beginning.’ ",
