--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -381,7 +381,7 @@
   "pli-tv-kd3:6.20.5": "ʻHow can I help her behave properly and suitably so as to deserve to be released? What can I do for the Sangha to lift that procedure?’ ",
   "pli-tv-kd3:6.20.6": "But you should return within seven days. ",
   "pli-tv-kd3:6.21.0": "Other monastics sending a message ",
-  "pli-tv-kd3:6.21.1": "“It may happen, monks, that a trainee nun is sick ",
+  "pli-tv-kd3:6.21.1": "“It may be, monks, that a trainee nun is sick ",
   "pli-tv-kd3:6.21.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.21.3": "ʻPlease come, Venerables, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.21.4": "ʻI’ll look for food for the sick one and for the nurses; I’ll look for medicine; and I’ll enquire about her sickness and nurse her.’ ",
