--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -394,7 +394,7 @@
   "pli-tv-kd3:6.22.6": "ʻPlease come, Venerables, I’ve failed in the training.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.22.7": "ʻI’ll make an effort to get her to undertake the training.’ ",
   "pli-tv-kd3:6.22.8": "But you should return within seven days. ",
-  "pli-tv-kd3:6.23.1": "It may happen that a trainee nun desires the full ordination ",
+  "pli-tv-kd3:6.23.1": "It may be that a trainee nun desires the full ordination ",
   "pli-tv-kd3:6.23.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.23.3": "ʻPlease come, Venerables, I desire the full ordination.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.23.4": "ʻI’ll make an effort to get her the full ordination, I’ll do the proclamation, or I’ll complete the quorum.’ ",
