--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -399,7 +399,7 @@
   "pli-tv-kd3:6.23.3": "ʻPlease come, Venerables, I desire the full ordination.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.23.4": "ʻI’ll make an effort to get her the full ordination, I’ll do the proclamation, or I’ll complete the quorum.’ ",
   "pli-tv-kd3:6.23.5": "But you should return within seven days.” ",
-  "pli-tv-kd3:6.24.1": "“It may happen that a novice monk is sick ",
+  "pli-tv-kd3:6.24.1": "“It may be that a novice monk is sick ",
   "pli-tv-kd3:6.24.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.24.3": "ʻPlease come, Venerables, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.24.4": "ʻI’ll look for food for the sick one and for the nurses; I’ll look for medicine; and I’ll enquire about his sickness and nurse him.’ ",
