--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -412,7 +412,7 @@
   "pli-tv-kd3:6.25.6": "ʻPlease come, Venerables, I want to ask about my age.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.25.7": "ʻI’ll ask him, or I’ll inform him.’ ",
   "pli-tv-kd3:6.25.8": "But you should return within seven days. ",
-  "pli-tv-kd3:6.26.1": "It may happen that a novice monk desires the full ordination ",
+  "pli-tv-kd3:6.26.1": "It may be that a novice monk desires the full ordination ",
   "pli-tv-kd3:6.26.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.26.3": "ʻPlease come, Venerables, I desire the full ordination.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.26.4": "ʻI’ll make an effort to get him the full ordination, I’ll do the proclamation, or I’ll complete the quorum.’ ",
