--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -417,7 +417,7 @@
   "pli-tv-kd3:6.26.3": "ʻPlease come, Venerables, I desire the full ordination.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.26.4": "ʻI’ll make an effort to get him the full ordination, I’ll do the proclamation, or I’ll complete the quorum.’ ",
   "pli-tv-kd3:6.26.5": "But you should return within seven days.” ",
-  "pli-tv-kd3:6.27.1": "“It may happen that a novice nun is sick ",
+  "pli-tv-kd3:6.27.1": "“It may be that a novice nun is sick ",
   "pli-tv-kd3:6.27.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.27.3": "ʻPlease come, Venerables, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.27.4": "ʻI’ll look for food for the sick one and for the nurses; I’ll look for medicine; and I’ll enquire about her sickness and nurse her.’ ",
