--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -430,7 +430,7 @@
   "pli-tv-kd3:6.28.6": "ʻPlease come, Venerables, I want to ask about my age.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.28.7": "ʻI’ll ask her, or I’ll inform her.’ ",
   "pli-tv-kd3:6.28.8": "But you should return within seven days. ",
-  "pli-tv-kd3:6.29.1": "It may happen that a novice nun desires to undertake the training of a trainee nun ",
+  "pli-tv-kd3:6.29.1": "It may be that a novice nun desires to undertake the training of a trainee nun ",
   "pli-tv-kd3:6.29.2": "and sends a message to the monks: ",
   "pli-tv-kd3:6.29.3": "ʻPlease come, Venerables, I desire to undertake the training.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:6.29.4": "ʻI’ll make an effort to get her to undertake the training of a trainee nun.’ ",
