--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -448,7 +448,7 @@
   "pli-tv-kd3:7.2.1": "“Even if you’re not sent for, let alone if you are, I allow you to go for seven days to seven kinds of people—",
   "pli-tv-kd3:7.2.2": "a monk, a nun, a trainee nun, a novice monk, a novice nun, your mother, your father. ",
   "pli-tv-kd3:7.2.4": "But you should return within seven days. ",
-  "pli-tv-kd3:7.3.1": "It may happen that a monk’s mother is sick ",
+  "pli-tv-kd3:7.3.1": "It may be that a monk’s mother is sick ",
   "pli-tv-kd3:7.3.2": "and sends a message to her son: ",
   "pli-tv-kd3:7.3.3": "ʻPlease come, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:7.3.4": "ʻI’ll look for food for my sick mother and for the nurses; I’ll look for medicine; and I’ll enquire about her sickness and nurse her.’ ",
