--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -453,7 +453,7 @@
   "pli-tv-kd3:7.3.3": "ʻPlease come, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:7.3.4": "ʻI’ll look for food for my sick mother and for the nurses; I’ll look for medicine; and I’ll enquire about her sickness and nurse her.’ ",
   "pli-tv-kd3:7.3.5": "But you should return within seven days. ",
-  "pli-tv-kd3:7.4.1": "It may happen that a monk’s father is sick ",
+  "pli-tv-kd3:7.4.1": "It may be that a monk’s father is sick ",
   "pli-tv-kd3:7.4.2": "and sends a message to his son: ",
   "pli-tv-kd3:7.4.3": "ʻPlease come, I’m sick.’ Then—even if you’re not sent for, let alone if you are—you should go for seven days, thinking, ",
   "pli-tv-kd3:7.4.4": "ʻI’ll look for food for my sick father and for the nurses; I’ll look for medicine; and I’ll enquire about his sickness and nurse him.’ ",
