--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -459,7 +459,7 @@
   "pli-tv-kd3:7.4.4": "ʻI’ll look for food for my sick father and for the nurses; I’ll look for medicine; and I’ll enquire about his sickness and nurse him.’ ",
   "pli-tv-kd3:7.4.5": "But you should return within seven days. ",
   "pli-tv-kd3:7.5.0": "6. The allowance to go only when sent for ",
-  "pli-tv-kd3:7.5.1": "“It may happen that a monk’s brother is sick ",
+  "pli-tv-kd3:7.5.1": "“It may be that a monk’s brother is sick ",
   "pli-tv-kd3:7.5.2": "and sends a message to his brother: ",
   "pli-tv-kd3:7.5.3": "ʻPlease come, I’m sick.’ You should go for seven days, but only if you’re sent for, not if you’re not. ",
   "pli-tv-kd3:7.5.4": "And you should return within seven days. ",
