--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -467,7 +467,7 @@
   "pli-tv-kd3:7.6.2": "and sends a message to her brother: ",
   "pli-tv-kd3:7.6.3": "ʻPlease come, I’m sick.’ You should go for seven days, but only if you’re sent for, not if you’re not. ",
   "pli-tv-kd3:7.6.4": "And you should return within seven days. ",
-  "pli-tv-kd3:7.7.1": "It may happen that a monk’s relative is sick ",
+  "pli-tv-kd3:7.7.1": "It may be that a monk’s relative is sick ",
   "pli-tv-kd3:7.7.2": "and sends him a message: ",
   "pli-tv-kd3:7.7.3": "ʻPlease come, Venerable, I’m sick.’ You should go for seven days, but only if you’re sent for, not if you’re not. ",
   "pli-tv-kd3:7.7.4": "And you should return within seven days. ",
